// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`count count.for 1`] = `
Array [
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
]
`;

exports[`count count.for with step 1`] = `
Array [
  0,
  2,
  4,
  6,
  8,
]
`;

exports[`count count.map 1`] = `
Array [
  2000,
  2001,
  2002,
  2003,
  2004,
  2005,
  2006,
  2007,
  2008,
  2009,
  2010,
  2011,
  2012,
  2013,
  2014,
  2015,
  2016,
  2017,
  2018,
  2019,
]
`;

exports[`count countFromTo.map 1`] = `
Array [
  2010,
  2011,
  2012,
  2013,
  2014,
  2015,
  2016,
  2017,
  2018,
  2019,
]
`;

exports[`count reduce 1`] = `
Object {
  "key-0": "Key is 0",
  "key-1": "Key is 1",
  "key-2": "Key is 2",
  "key-3": "Key is 3",
  "key-4": "Key is 4",
  "key-5": "Key is 5",
  "key-6": "Key is 6",
  "key-7": "Key is 7",
  "key-8": "Key is 8",
  "key-9": "Key is 9",
}
`;
